2012-01-14 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c:
	* Source/CFString.c:
	* Source/CFStringEncoding.c:
	* Source/GSPrivate.h: Redesigned Unicode conversion.
	* Headers/CoreFoundation/CFBase.h: Define __BIG_ENDIAN__ or 
	__LITTLE_ENDIAN__ macros for platforms do not already define them.
	* Headers/CoreFoundation/CFByteOrder.h: Use new endian macros.
	* Headers/CoreFoundation/ForFoundationOnly.h: Delete.


2012-01-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c:
	* Source/CFURL.m:
	* Source/common.mk:
	* Source/GNUmakefile: Replace CFURL.m with CFURL.c.  CFURL still not
	functional.
	* Source/CFStringEncoding.c:
	* Source/CFStringFormat.c:
	* Source/GSPrivate.h: Moved some defines and functions to GSPrivate.h.

2012-01-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCalendar.c:
	* Source/CFDateFormatter.c:
	* Source/CFBundle.m: Avoid compiler warnings.
	* Source/Keys+Identifiers.c: Fix broken build.

2012-01-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFRuntime.h:
	* Headers/CoreFoundation/CFByteOrder.h:
	* Headers/CoreFoundation/CFString.h:
	* Headers/CoreFoundation/CFLocale.h:
	* Headers/CoreFoundation/CFNumberFormatter.h:
	* Source/CFString.c:
	* Source/CFStringFormat.c:
	* Source/CFBundle.m:
	* Source/CFLocale.c:
	* Source/GSPrivate.h:
	* Source/CFDateFormatter.c:
	* Source/CFStringUtilities.c:
	* Source/Keys+Identifiers.c:
	* Source/CFBinaryHeap.c:
	* Source/CFRuntime.c: More portability improvements.

2012-01-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c:
	* Source/CFBitVector.c:
	* Source/CFCalendar.c:
	* Source/CFBase.c:
	* Source/CFStringFormat.c:
	* Source/CFNumber.c:
	* Source/tzfile.h:
	* Source/CFLocale.c:
	* Source/GSPrivate.h:
	* Source/Keys+Identifiers.c:
	* Source/CFUUID.c:
	* Source/CFXMLNode.c:
	* Source/GSHashTable.c:
	* Source/CFStringEncoding.c:
	* Source/CFXMLParser.c:
	* Source/CFRuntime.c:
	* Headers/CoreFoundation/CFRuntime.h: